@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <object name="portal_css" meta_type="Stylesheets Registry">
  <stylesheet title="" cacheable="True" compression="safe" cookable="True"
-    enabled="1" expression="not: portal/portal_membership/isAnonymousUser"
+    enabled="1" expression="" authenticated="True"
     id="member.css" media="screen" rel="stylesheet" rendering="import"/>
 
  <stylesheet title="" cacheable="True" compression="safe" cookable="True"
